# blackjack-simulator

./: README.md  pyproject.toml
.github/: copilot-instructions.md
src/blackjack_sim/: main.py  plot_convergence.py
src/blackjack_sim/core/: action.py  card.py  deck.py  hand.py
src/blackjack_sim/simulation/: game.py  result.py
src/blackjack_sim/strategies/: basic_strategy.py
tests/unit/: test_game.py
